--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          <p>Die Astronauten waren erstaunt, wie gut die Lunar Wash funktionierte. Sie konnten ihre Kleidung, Bettwäsche und Handtücher regelmäßig waschen und brauchten nie wieder schmutzige Wäsche zu bearbeiten oder auf die Erde zu schicken. 
          </p> 
          <p> 
- Die Erfindung der Lunar Wash vereinfachte das Leben auf dem Mond erheblich und eröffnete neue Möglichkeiten für die zukünftige Raumfahrt. Die Wissenschaftler waren stolz auf ihre Arbeit und die Rolle, die ihre Waschmaschine auf dem Mond spielte. Von diesem Tag an waren sie bekannt als die "Mondwascher".        </p> 
+ Die Erfindung der Lunar Wash vereinfachte das Leben auf dem Mond erheblich und eröffnete neue Möglichkeiten für die zukünftige Raumfahrt. Die Wissenschaftler waren stolz auf ihre Arbeit und die Rolle, die ihre Waschmaschine auf dem Mond spielte. Von diesem Tag an waren sie bekannt als die "Mondwäscher".        </p> 
   
                                                                                           
                                                                           
