--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@ Eines Tages, als sie in den Tiefen des Meeres tauchte, traf Prinzessin Diana auf
 Marvin war genauso verzaubert von der Prinzessin wie sie von ihm war. Sie verbrachten Stunden miteinander und entdeckten ihre gemeinsame Liebe zur Natur und zum Meer.
 </p>
 	<p>
-Doch ihre Liebe wurde auf die Probe gestellt, als sie zurück an die Oberfläche kamen. Sie wussten, dass ihre unterschiedlichen Welten sie voneinander trennten. Marvin war ein Mensch und er konnte nicht so wie sie im Wasser leben. Diana hingegen war eine Prinzessin, die verpflichtet war, den Thron zu übernehmen und ihre Pflichten zu erfüllen.
+Doch ihre Liebe wurde auf die Probe gestellt, als sie zurück an die Oberfläche kamen. Sie wussten, dass ihre unterschiedlichen Welten sie voneinander trennten. Marvin war ein Mensch und er konnte ohne Tauchausrüstung nicht so wie sie im Wasser leben. Diana hingegen war eine Prinzessin mit Kiemen, die verpflichtet war, den Thron des Oceans zu übernehmen und ihr Königreich regieren.
 </p>
 	<p>
 Trotz dieser Hindernisse liebten sie sich noch immer und trafen sich heimlich unter Wasser, um ihre Liebe zu pflegen. Sie schwammen durch die tiefsten und dunkelsten Meerestiefen, um sich zu treffen und sich ihrer Liebe zueinander zu versichern.
 </p>
 	<p>
-Am Ende mussten sie sich jedoch trennen. Diana musste zurück an die Oberfläche, um ihre Pflichten als Prinzessin zu erfüllen, während Marvin zurückbleiben musste und weiterhin im Meer leben musste.
+Am Ende mussten sie sich jedoch trennen. Diana musste zurück in ihr Reich, um ihre Pflichten als Prinzessin zu erfüllen, während Marvin zurückbleiben muss und weiterhin an Land leben musste.
 </p>
 	<p>
-Jedoch trugen beide die Erinnerung an ihre Liebe im Herzen und Diana konnte sich ihrer Geliebten immer im Meer gedenken. Jahre vergingen und auch Prinzessin Diana gelang es sich an einen Menschen zu binden und zu heiraten. Niemand wusste jedoch, dass ihre Liebe zu Marvin, auch nach all den vielen Jahren, immer noch stark war.
+Jedoch trugen beide die Erinnerung an ihre Liebe im Herzen und Marvin konnte sich seiner Geliebten immer im Meer gedenken. Jahre vergingen und er entwickele einen Apparat mit dem er seine Atemluft aus dem Wasser filtern könnte und auch Prinzessin Diana gelang es sich an den Strand zurück zu ziehen wo sie eine Auszeit nimmt und auf Marvin hoffte, und er kam. Prinzessin Diana konnte ihren Prinz endlich mitnehmen in ihr Königreich, endlich war es so weit sich an einen Menschen zu binden und zu heiraten. Jeder wusste nun, dass ihre Liebe zu Marvin, auch nach all den vielen Jahren, immer noch stark war.
 </p>
 	<p>
-Als sie eines Tages verstarb und schließlich ins Meer zurückkehren sollte, wurde sie von einem Fisch begleitet, der sie in den Tiefen des Ozeans zu Marvin führte. Ein letztes Mal konnten sie ihre Liebe füreinander zelebrieren, bevor die Prinzessin unter Wasser begraben wurde.
+Als sie eines Tages verstarben und schließlich an Land zurückkehren sollten, wurden sie von einem Delphin gebracht, der sie durch die Tiefen des Ozeans zum Sternenplatz führte. Ein letztes Mal konnten sie ihre Liebe füreinander zelebrieren, bevor das Königspaar unter Wasser begraben wurde.
 </p>
 	<p>
-Für immer änderten sich die Gewässer um den neuen Grabplatz der Prinzessin. Das Wasser war klarer und die Flora und Fauna blühten dort prächtiger. Marvin kümmerte sich bis zu seinem Tod um das Grab seiner Liebe und pflegte es in Reue. Jeder der an dem Grab der Prinzessin vorüber kam, konnte ihre Liebe in den Tiefen und im Rauschen des Meeres hören.
+Für immer änderten sich die Gewässer um den neuen Grabplatz der Prinzessin und des Prinzen. Das Wasser war klarer und die Flora und Fauna blühten dort prächtiger. Der Delphin war lange Zeit ein guter Freund und kümmerte sich bis zu seinem Tod um das Grab seiner Lieben Freunde und pflegte es sehr sorgsam. Jeder der an dem Grab der beiden vorbei kam, konnte ihre Liebe in den Tiefen und im Rauschen des Meeres hören.
 </p>	
 
 
