--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Mondwäscher</a></li>
-								<li><a href="#work">Prinzessin Diana</a></li>
+								<li><a href="#work">Prinzessin Sophia</a></li>
 								<li><a href="#about">Frosch König</a></li>
 								<li><a href="#contact">Pommes im Weltall</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -95,25 +95,25 @@ Schreib mir eine Geschichte über Prinzessin Diana die Unterwasser einen jungen 
 </p>
 	<p>
 
-Prinzessin Diana war eine junge und schöne Prinzessin, die in einem Königreich lebte, das tief im Meer gelegen war. Sie war immer von der Schönheit des Ozeans fasziniert und verbrachte Stunden damit, ihn zu erkunden.
+Prinzessin Sophia war eine junge und schöne Prinzessin, die in einem Königreich lebte, das tief im Meer gelegen war. Sie war immer von der Schönheit des Ozeans fasziniert und verbrachte Stunden damit, ihn zu erkunden.
 </p>
 	<p>
-Eines Tages, als sie in den Tiefen des Meeres Richtung Strand entlang tauchte, traf Prinzessin Diana auf einen jungen Mann namens Marvin, der ebenfalls unter Wasser schwamm. Obwohl sie ihn noch nie zuvor gesehen hatte, erkannte sie sofort, dass er der Mann war, nach dem sie ihr ganzes Leben lang gesucht hatte.
+Eines Tages, als sie in den Tiefen des Meeres Richtung Strand entlang tauchte, traf Prinzessin Sophia auf einen jungen Mann namens Hugo, der ebenfalls unter Wasser schwamm. Obwohl sie ihn noch nie zuvor gesehen hatte, erkannte sie sofort, dass er der Mann war, nach dem sie ihr ganzes Leben lang gesucht hatte.
 </p>
 	<p>
-Marvin war genauso verzaubert von der Prinzessin wie sie von ihm war. Sie verbrachten Stunden miteinander und entdeckten ihre gemeinsame Liebe zur Natur und zum Meer.
+Hugo war genauso verzaubert von der Prinzessin wie sie von ihm war. Sie verbrachten Stunden miteinander und entdeckten ihre gemeinsame Liebe zur Natur und zum Meer.
 </p>
 	<p>
-Doch ihre Liebe wurde auf die Probe gestellt, weil er immer wieder zurück an die Oberfläche musste. Sie wussten, dass ihre unterschiedlichen Welten sie voneinander trennten. Marvin war ein Mensch und er konnte ohne Tauchausrüstung nicht so wie sie im Wasser leben. Diana hingegen war eine Prinzessin mit Kiemen, die verpflichtet war, den Thron des Oceans zu übernehmen und ihr Königreich zu regieren.
+Doch ihre Liebe wurde auf die Probe gestellt, weil er immer wieder zurück an die Oberfläche musste. Sie wussten, dass ihre unterschiedlichen Welten sie voneinander trennten. Hugo war ein Mensch und er konnte ohne Tauchausrüstung nicht so wie sie im Wasser leben. Sophia hingegen war eine Prinzessin mit Kiemen, die verpflichtet war, den Thron des Oceans zu übernehmen und ihr Königreich zu regieren.
 </p>
 	<p>
 Trotz dieser Hindernisse liebten sie sich noch immer und trafen sich heimlich unter Wasser, um ihre Liebe zu pflegen. Sie schwammen durch die tiefsten und dunkelsten Meerestiefen, um sich zu treffen und sich ihrer Liebe zueinander zu versichern.
 </p>
 	<p>
-Irgendwann mussten sie sich jedoch trennen. Diana musste zurück in ihr Reich, um ihre Pflichten als Prinzessin zu erfüllen, während Marvin zurückbleiben muss und weiterhin an Land leben musste.
+Irgendwann mussten sie sich jedoch trennen. Sophia musste zurück in ihr Reich, um ihre Pflichten als Prinzessin zu erfüllen, während Hugo zurückbleiben muss und weiterhin an Land leben musste.
 </p>
 	<p>
-Jedoch trugen beide die Erinnerung an ihre Liebe im Herzen und Marvin konnte sich seiner Geliebten immer im Meer gedenken. Jahre vergingen und er entwickele einen Apparat mit dem er seine Atemluft aus dem Wasser filtern konnte um auch selbst Unterwasser bleiben zu können. Auch Prinzessin Diana gelang es sich an den Strand zurück zu ziehen wo sie eine Auszeit nehmen wollte und auf Marvin hoffte. Und er kam. Prinzessin Diana konnte ihr Glück kaum fassen, sie konnte ihren Prinzen endlich mitnehmen in ihr Königreich, endlich war es so weit sich an einen Menschen zu binden und zu heiraten. Jeder wusste nun, dass ihre Liebe zu Marvin, auch nach all den vielen Jahren, immer stark war.
+Jedoch trugen beide die Erinnerung an ihre Liebe im Herzen und Hugo konnte sich seiner Geliebten immer im Meer gedenken. Jahre vergingen und er entwickele einen Apparat mit dem er seine Atemluft aus dem Wasser filtern konnte um auch selbst Unterwasser bleiben zu können. Auch Prinzessin Sophia gelang es sich an den Strand zurück zu ziehen wo sie eine Auszeit nehmen wollte und auf Hugo hoffte. Und er kam. Prinzessin Sophia konnte ihr Glück kaum fassen, sie konnte ihren Prinzen endlich mitnehmen in ihr Königreich, endlich war es so weit sich an einen Menschen zu binden und zu heiraten. Jeder wusste nun, dass ihre Liebe zu Hugo, auch nach all den vielen Jahren, immer stark war.
 </p>
 	<p>
 Als sie eines Tages verstarben und schließlich gemeinsam an Land zurückkehren sollten, wurden sie von einer Schildkröte gebracht, die sie durch die Tiefen des Ozeans zum Sternenplatz führte. Ein letztes Mal konnten sie ihre Liebe füreinander zelebrieren, bevor das Königspaar unter Wasser begraben wurde.
