--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Prinzessin Diana</h2>
+								<h2 class="major">Prinzessin Sophia</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 
 <p>	
-Schreib mir eine Geschichte über Prinzessin Diana die Unterwasser einen jungen namens Marvin ihre große Liebe findet
+Schreib mir eine Geschichte über Prinzessin Sophia die Unterwasser einen jungen namens Hugo ihre große Liebe findet
 
 </p>
 	<p>
